# omk-patchmatrix

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  ChangeLog  README.md  VERSION  list.edc  meson.build  meson_options.txt  nk_patcher.h  osc_client.c  osc_driver.h  osc_server.c  osc_test.c  patcher.c  patcher.edc  patcher.h  patchmatrix.1  patchmatrix.c  patchmatrix.desktop.in  patchmatrix.edc  patchmatrix.h  patchmatrix_db.c  patchmatrix_db.h  patchmatrix_jack.c  patchmatrix_jack.h  patchmatrix_mixer.1  patchmatrix_mixer.c  patchmatrix_monitor.1  patchmatrix_monitor.c  patchmatrix_nk.c  patchmatrix_nk.h  tags  test_varchunk.c  types_c.taghl  varchunk.c  varchunk.h
.builds/: alpine-latest.yml
.reuse/: dep5
cmake/: arm-linux-gnueabihf.cmake  i686-w64-mingw32.cmake  universal-apple-darwin.cmake  x86_64-w64-mingw32.cmake
example/: example.c
man/: patchmatrix.1  patchmatrix_mixer.1  patchmatrix_monitor.1
meson/: arm-linux-gnueabihf  i686-linux-gnu  i686-w64-mingw32  universal-apple-darwin  x86_64-linux-gnu  x86_64-w64-mingw32
nk_pugl/: nk_pugl.h
nuklear/: nuklear.h
osc.lv2/: stream.h  writer.h
patchmatrix/: patchmatrix.h  patchmatrix_db.h  patchmatrix_jack.h  patchmatrix_nk.h
pugl/src/: implementation.c  mac.m  win.c  x11.h
share/: patchmatrix.desktop.in
share/patchmatrix/: midi.png.license
src/: patchmatrix.c  patchmatrix_db.c  patchmatrix_jack.c  patchmatrix_mixer.c  patchmatrix_monitor.c  patchmatrix_nk.c
subprojects/nk_pugl/: .gitlab-ci.yml  meson.build  meson_options.txt
subprojects/nk_pugl/.reuse/: dep5
subprojects/nk_pugl/example/: example.c
subprojects/nk_pugl/nk_pugl/: nk_pugl.h
subprojects/nk_pugl/pugl/include/pugl/: pugl.h
subprojects/nk_pugl/pugl/src/: x11.c
subprojects/varchunk/: .build.yml  meson_options.txt
test/: Makefile  osc_test.c
varchunk/: .travis.yml  CMakeLists.txt  README.md  test_varchunk.c  varchunk.h
