# SPDX-FileCopyrightText: Hanspeter Portner <dev@open-music-kontrollers.ch>
# SPDX-License-Identifier: CC0-1.0

option('build-tests',
	type : 'boolean',
	value : true,
	yield : true)
option('build-examples',
	type : 'boolean',
	value : false,
	yield : true)

option('version', type : 'string', value : '0.2.0')
